<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>furore.github.io</groupId>
	<artifactId>iis-sandbox-hapi-client-skeleton</artifactId>
	<version>0.1</version>
	<packaging>jar</packaging>

	<name> iis sandbox Hapi Client Skeleton Project (Client)</name>

   <properties>
      <hapifhir_version>5.6.0</hapifhir_version>
   </properties>

   <repositories>
		<repository>
			<id>oss-snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<dependencies>

		<!-- This dependency includes the core HAPI-FHIR classes -->
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-base</artifactId>
			<version>${hapifhir_version}</version>
		</dependency>
      
      <!-- Include the client -->
     	<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-client</artifactId>
			<version>${hapifhir_version}</version>
      </dependency>

		<!-- At least one "structures" JAR must also be included -->
		<dependency>
			<groupId>ca.uhn.hapi.fhir</groupId>
			<artifactId>hapi-fhir-structures-r4</artifactId>
			<version>${hapifhir_version}</version>
		</dependency>

		<!-- 
		HAPI-FHIR uses Logback for logging support. The logback library is included 
		automatically by Maven as a part of the hapi-fhir-base dependency, but you 
		also need to include a logging library. Logback is used here, but log4j
		would also be fine. 
		-->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>

		<dependency>
			<groupId>io.github.linuxforhealth</groupId>
			<artifactId>hl7v2-fhir-converter</artifactId>
			<version>1.0.10</version>
		</dependency>

	</dependencies>

	<build>
		
		<plugins>
			<!-- 
			Tell Maven which Java source version you want to use
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			
		</plugins>
	</build>

</project>
